<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>opscloud</artifactId>
        <groupId>com.baiyi</groupId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>opscloud-leo</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <dependency>
            <groupId>com.baiyi</groupId>
            <artifactId>opscloud-service</artifactId>
        </dependency>

        <dependency>
            <groupId>com.baiyi</groupId>
            <artifactId>opscloud-common</artifactId>
        </dependency>

        <dependency>
            <groupId>com.baiyi</groupId>
            <artifactId>opscloud-datasource-gitlab</artifactId>
        </dependency>

        <dependency>
            <groupId>com.baiyi</groupId>
            <artifactId>opscloud-datasource-jenkins</artifactId>
        </dependency>

        <dependency>
            <groupId>com.baiyi</groupId>
            <artifactId>opscloud-datasource-message</artifactId>
        </dependency>

        <dependency>
            <groupId>com.baiyi</groupId>
            <artifactId>opscloud-datasource-aliyun-acr</artifactId>
        </dependency>

        <dependency>
            <groupId>com.baiyi</groupId>
            <artifactId>opscloud-datasource-aliyun-eventbridge</artifactId>
        </dependency>

        <dependency>
            <groupId>com.baiyi</groupId>
            <artifactId>opscloud-datasource-aws-ecr</artifactId>
        </dependency>

        <!--suppress VulnerableLibrariesLocal -->
        <dependency>
            <groupId>com.baiyi</groupId>
            <artifactId>opscloud-datasource-kubernetes</artifactId>
        </dependency>

        <!--解析maven配置文件 -->
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-model</artifactId>
            <version>3.8.2</version>
        </dependency>

        <!--解析gradle配置文件 -->
        <!-- https://mvnrepository.com/artifact/org.gradle/gradle-tooling-api -->

    </dependencies>

</project>